Add search function to controllers
